<resources>
    <string name="app_name">Yellow Timer</string>
    <string name="databaseName">YellowTimerDB</string>
    <string name="addtask">Add Task</string>
    <string name="add">Add</string>
    <string name="enter_the_task_name">Enter The Task Name</string>
    <string name="nav_open">nav_open</string>
    <string name="nav_close">nav_close</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="tasks">Tasks</string>
    <string name="drawerimage">drawerImage</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="login">Login</string>
    <string name="passwordDontMatch">Passwords Does Not Match</string>
    <string name="incompleteFields">Please Fill All The Fields</string>
    <string name="userNotFound">User Not Found</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="pomodorotime_in_minutes">Pomodorotime in minutes</string>
    <string name="save">save</string>
    <string name="onPause">Timer not running</string>
    <string name="aboutText">Yellow Timer is an application that aims to help its users with time management. With the timer in the application, you can set a certain time for the task you are working on and focus on the task you are working on during that time. With the To-Do feature in the application, you can add your tasks and keep a record of these tasks on a regular basis.</string>
    <string name="thanks">Thanks</string>
</resources>