<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userPass"
            android:hint="@string/enter_password"
            app:layout_constraintTop_toBottomOf="@+id/userEmail"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userRePass"
            android:hint="@string/enter_password_again"
            app:layout_constraintTop_toBottomOf="@+id/userPass"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerUser"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@+id/userRePass"
            app:layout_constraintStart_toStartOf="@+id/userRePass"
            app:layout_constraintEnd_toEndOf="@id/userRePass"
            android:layout_marginTop="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>