<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userPass"
            app:layout_constraintTop_toBottomOf="@+id/userEmail"
            android:layout_marginStart="40dp"
            android:hint="@string/enter_password"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginUser"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/userPass"
            app:layout_constraintStart_toStartOf="@+id/userPass"
            app:layout_constraintEnd_toEndOf="@id/userPass"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerLabel"
            android:text="@string/register"
            android:textColor="@color/red_200"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/loginUser"
            app:layout_constraintStart_toStartOf="@id/loginUser"
            app:layout_constraintEnd_toEndOf="@+id/loginUser"
            android:layout_marginTop="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>