<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/darkMode"
        android:text="@string/dark_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/red_200"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modeToggle"
        app:layout_constraintTop_toTopOf="@+id/darkMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/darkMode"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pomodorTime"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/darkMode"
        app:layout_constraintStart_toStartOf="@id/darkMode"
        android:layout_marginTop="10dp"
        android:hint="@string/pomodorotime_in_minutes"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/savePomodoroTime"
        app:layout_constraintTop_toBottomOf="@+id/pomodorTime"
        app:layout_constraintStart_toStartOf="@+id/pomodorTime"
        android:text="@string/save"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>